--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,13 @@
+@import './styles/recap.css';
+
 body {
-  font-family: sans-serif;
+  font-family: "Roboto", Helvetica, sans-serif;
+  font-size: 2.5vh;
+  overflow-x: hidden;
+  margin: 0px;
+  min-height: 100vh;
+  width: auto;
+  background: #F8F6F5;
 }
 
 a {
