--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: sans-serif;
+  margin: 0;
+  min-height: 100vh;
 }
 
 a {
@@ -10,19 +12,36 @@ label {
   display: block;
 }
 
+.header {
+  position: fixed;
+  background-color: #AECECC;
+  width: 100%;
+  height: 50px;
+  margin-bottom: 10px;
+}
+
+.nav-bar {
+  display: flex;
+}
+
+.nav-links {
+  z-index: 1;
+  display: flex;
+}
+
 nav a {
   display: inline-block;
   margin: 1em;
 }
 
 form div {
-  margin: 1em;
+  margin: 2em;
   display: inline-block;
 }
 
 /* media query added to accomodate space for notch */
 @media screen and (display-mode: standalone) {
-  header {
+  .app-div {
     height: 88px !important;
   }
 }
