--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,13 @@
-@import './navbar.css';
+@import './styles/navbar.css';
+
 
 body {
-  font-family: sans-serif;
+  font-family: "Roboto", Helvetica, sans-serif;
+  font-size: 2.5vh;
+  overflow-x: hidden;
   margin: 0;
-  min-height: 100vh;
+  width: auto;
+  background: #F8F6F5;
 }
 
 a {
@@ -22,16 +26,14 @@ label {
   margin-bottom: 10px;
 }
 
-
-
 form div {
-  margin: 2em;
+  margin: 1em;
   display: inline-block;
 }
 
 /* media query added to accomodate space for notch */
 @media screen and (display-mode: standalone) {
-  .app-div {
+  header {
     height: 88px !important;
   }
 }
