--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -1,13 +1,16 @@
-.nav-bar {
-  display: flex;
+nav {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
+
 
 .nav-links {
   z-index: 1;
   display: flex;
+  justify-content: space-around;
 }
 
 nav a {
   display: inline-block;
-  margin: 1em;
 }
