--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,15 @@
 @import './styles/navbar.css';
 
-
-body {
+html {
   font-family: "Roboto", Helvetica, sans-serif;
   font-size: 2.5vh;
   overflow-x: hidden;
+}
+
+body {
   margin: 0;
   width: auto;
+  min-height: 100vh;
   background: #F8F6F5;
 }
 
@@ -20,6 +23,7 @@ label {
 
 .header {
   position: fixed;
+  top: 0;
   background-color: #AECECC;
   width: 100%;
   height: 50px;
@@ -29,6 +33,10 @@ label {
 form div {
   margin: 1em;
   display: inline-block;
+}
+
+.routes-container {
+  padding: 3rem 1.5rem;
 }
 
 /* media query added to accomodate space for notch */
