--- a/public/styles/media-query.css
+++ b/public/styles/media-query.css
@@ -4,14 +4,15 @@
     padding: 1.5rem 1rem;
   }
 
-  .signup-btn {
+  .signup-btn, .login-btn {
     width: 15rem;
   }
 
-  .signup-btn-container {
+  .signup-btn-container, .login-btn-container {
     padding-top: 1rem;
   }
-  .signup-container {
+
+  .signup-container, .login-container {
     margin: 0;
     width: 100%;
     padding: 1.5rem 0;
@@ -43,5 +44,17 @@
     justify-content: center;
     padding: 0;
     margin: 0;
+  }
+
+  .form-small-text {
+    font-size: .6rem;
+    padding-top: 1.25rem;
+    text-align: center;
+  }
+
+  .form-disclaimer {
+    text-align: start;
+    font-size: .6rem;
+    padding-top: 1.25rem;
   }
 }
