disclaimer page made and links to home

--- a/public/styles/media-query.css
+++ b/public/styles/media-query.css
@@ -59,4 +59,13 @@
     font-size: .6rem;
     padding-top: 1.25rem;
   }
+
+  .disclaimer-container {
+    padding: 0.5rem;
+  }
+
+  .disclaimer-btn {
+    height: 1.5rem;
+    font-size: .8rem;
+  }
 }
