--- a/public/styles/disclaimer.css
+++ b/public/styles/disclaimer.css
@@ -1,4 +1,3 @@
-
 .disclaimer-container {
   display: flex;
   flex-direction: column;
@@ -17,4 +16,8 @@
   width: 10rem;
   margin-top: 1rem;
   color: inherit;
+}
+
+.form-disclaimer {
+  color: #575757;
 }
