--- a/public/styles/media-query.css
+++ b/public/styles/media-query.css
@@ -68,4 +68,13 @@
     height: 1.5rem;
     font-size: .8rem;
   }
+
+  .homepage-container {
+    padding: 0.5rem;
+  }
+
+  .homepage-btn-link {
+    font-weight: 600;
+  }
+
 }
