--- a/public/style.css
+++ b/public/style.css
@@ -41,6 +41,26 @@ label {
   margin-bottom: 10px;
 }
 
+.header-not-signed-in {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 50px;
+  margin-bottom: 10px;
+}
+
+.header-logo-container {
+  display: flex;
+  justify-content: center;
+  background-color: #aececc;
+}
+
+.header-logo {
+  padding: 1rem;
+  text-align: center;
+  width: 8rem;
+}
+
 form div {
   margin: 1em;
   display: inline-block;
