--- a/public/styles/current-workout.css
+++ b/public/styles/current-workout.css
@@ -3,19 +3,66 @@
   flex-direction: column;
 }
 
+.cw-workout-name {
+  font-size: 1.35rem;
+  margin-bottom: 0;
+  font-weight: 500;
+}
+.cw-exercise-name {
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: .5rem;
+}
+
 .cw-headings {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding: 0 .25rem;
 }
 
 .cw-heading {
   margin: 0;
   font-size: .8rem;
+  font-weight: 600;
+  color: #5B5757;
 }
 
 .cw-info-container {
   background: #EFEFEF;
   border-radius: 5px;
+}
+
+.cw-set-info {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: .5rem .3rem;
+}
+
+.cw-sr-input, .cw-check-input {
+  height: 1rem;
+  width: 1rem;
+  background: #C9E0E8;
+  border-radius: 5px;
+  border: none;
+}
+
+.cw-weight-input {
+  height: 1rem;
+  width: 2.5rem;
+  background: #C9E0E8;
+  border-radius: 5px;
+  border: none;
+}
+
+.cw-check-input {
+  background: #C8E5B8;
+}
+
+.cw-previous {
+  font-size: .8rem;
+  margin: 0;
+  color: #5B5757;
 }
