--- a/public/style.css
+++ b/public/style.css
@@ -4,9 +4,10 @@
 @import "./styles/disclaimer.css";
 @import "./styles/nav-bar-icons.css";
 @import "./styles/homepage.css";
-@import './styles/leaderboard.css';
-@import './styles/current-workout.css';
+@import "./styles/leaderboard.css";
+@import "./styles/current-workout.css";
 @import "./styles/media-query.css";
+@import "./styles/exercise-category.css";
 
 * {
   -webkit-tap-highlight-color: transparent;
