button styling not connected to backend yet

--- a/public/styles/current-workout.css
+++ b/public/styles/current-workout.css
@@ -37,20 +37,27 @@
 .cw-set-info {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin: 0;
   padding: .5rem .3rem;
 }
 
+.cw-set-info input {
+  text-align: center;
+  font-family: "Roboto", Helvetica, sans-serif;
+  font-size: 1rem;
+}
+
 .cw-sr-input, .cw-check-input {
-  height: 1rem;
-  width: 1rem;
+  height: 1.25rem;
+  width: 1.25rem;
   background: #C9E0E8;
   border-radius: 5px;
   border: none;
 }
 
 .cw-weight-input {
-  height: 1rem;
+  height: 1.25rem;
   width: 2.5rem;
   background: #C9E0E8;
   border-radius: 5px;
@@ -65,4 +72,30 @@
   font-size: .8rem;
   margin: 0;
   color: #5B5757;
+}
+
+.cw-btn-container {
+  display: flex;
+  justify-content: center;
+  margin: 1rem;
+}
+
+.cw-add-btn {
+  font-size: .8rem;
+  background: #DDE5F0;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  border: none;
+  width: 10rem;
+  height: 1.5rem;
+}
+
+.cw-finish-btn {
+  font-size: .8rem;
+  background: #CEE2CD;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  border: none;
+  width: 15rem;
+  height: 1.5rem;
 }
