--- a/public/style.css
+++ b/public/style.css
@@ -6,8 +6,8 @@
 @import "./styles/homepage.css";
 @import "./styles/leaderboard.css";
 @import "./styles/current-workout.css";
+@import "./styles/musclegroup.css";
 @import "./styles/media-query.css";
-@import "./styles/exercise-category.css";
 
 * {
   -webkit-tap-highlight-color: transparent;
