--- a/public/styles/homepage.css
+++ b/public/styles/homepage.css
@@ -22,15 +22,14 @@
   width: 12rem;
   margin-top: 1rem;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  color: white;
 }
 
 .homepage-btn:hover {
   background: #A3BC93;
+  cursor: pointer;
 }
 
-.homepage-btn-link {
-  color: white;
-}
 
 .homepage-image {
   text-align: center;
