--- a/public/styles/musclegroup.css
+++ b/public/styles/musclegroup.css
@@ -1,4 +1,4 @@
-.exerciseCategory-container {
+.musclegroup-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -6,12 +6,12 @@
   padding: 1.5rem 3rem;
 }
 
-.exerciseCategory-btn-container {
+.musclegroup-btn-container {
   display: flex;
   flex-direction: column;
 }
 
-.exerciseCategory-btn {
+.musclegroup-btn {
   text-align: center;
   text-decoration: none;
   border-radius: 25px;
@@ -22,17 +22,10 @@
   width: 12rem;
   margin-top: 1rem;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.exerciseCategory-btn:hover {
-  background: #a3bc93;
-}
-
-.exerciseCategory-btn-link {
   color: white;
 }
 
-.exerciseCategory-image {
-  text-align: center;
-  width: 13rem;
+.musclegroup-btn:hover {
+  background: #a3bc93;
+  cursor: pointer
 }
