UserProfile page renders and logout button added

--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@
 @import "./styles/leaderboard.css";
 @import "./styles/current-workout.css";
 @import "./styles/musclegroup.css";
+@import "./styles/user-profile.css";
 @import "./styles/media-query.css";
 
 * {
