exercist lists basic styling

--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,7 @@
 @import "./styles/current-workout.css";
 @import "./styles/musclegroup.css";
 @import "./styles/user-profile.css";
+@import "./styles/exercises-list.css";
 @import "./styles/media-query.css";
 
 * {
