--- a/public/styles/exercises-list.css
+++ b/public/styles/exercises-list.css
@@ -1,4 +1,3 @@
-
 .all-exercises-container {
   display: flex;
   flex-direction: column;
@@ -22,6 +21,7 @@
 
 .all-exercises-list-name {
   font-size: .8rem;
+  color: black;
 }
 
 .all-exercises-add-btn {
@@ -31,4 +31,5 @@
 .all-exercises-link {
   align-self: flex-end;
   font-size: .8rem;
+  color: #5B5757;
 }
