--- a/public/styles/homepage.css
+++ b/public/styles/homepage.css
@@ -20,7 +20,6 @@
   border: none;
   height: 2.5rem;
   width: 12rem;
-  margin-top: 1rem;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   color: white;
 }
@@ -30,6 +29,9 @@
   cursor: pointer;
 }
 
+.homepage-link-btn {
+  margin-top: 1rem;
+}
 
 .homepage-image {
   text-align: center;
