--- a/public/styles/musclegroup.css
+++ b/public/styles/musclegroup.css
@@ -24,7 +24,6 @@
   border: none;
   height: 2.5rem;
   width: 12rem;
-  margin-top: 1rem;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   color: white;
 }
@@ -32,4 +31,8 @@
 .musclegroup-btn:hover {
   background: #a3bc93;
   cursor: pointer
+}
+
+.musclegroup-link-btn {
+  margin-top: 1rem;
 }
