--- a/public/styles/choose-sprite.css
+++ b/public/styles/choose-sprite.css
@@ -1,9 +1,10 @@
 .sprite-container{
     display: flex;
-    flex-wrap: wrap;
+    justify-content: space-around;
+    float: left;
 }
 
 .sprite-small{
-    max-width: 175px;
-    max-height: 175px;
+    width: 150px;
+    height: auto;
 }
