--- a/public/styles/choose-sprite.css
+++ b/public/styles/choose-sprite.css
@@ -1,10 +1,10 @@
 .sprite-container{
     display: flex;
     justify-content: space-around;
-    float: left;
+    flex-wrap: wrap;
 }
 
 .sprite-small{
-    width: 150px;
-    height: auto;
+    max-width: 100px;
+    max-height: 100px;
 }
