--- a/public/styles/current-workout.css
+++ b/public/styles/current-workout.css
@@ -47,8 +47,18 @@
   margin-left: .25rem;
 }
 
-.cw-info-container, .cw-info-container-main {
-  background: #EFEFEF;
+.cw-info-container-main {
+  background: #F2F2F2;
+  border-radius: 5px;
+}
+
+.cw-info-container-yes {
+  background: #DDECD2;
+  border-radius: 5px;
+}
+
+.cw-info-container-no {
+  background: #F2F2F2;
   border-radius: 5px;
 }
 
@@ -67,16 +77,22 @@
   margin-left: .3rem;
 }
 
-.cw-set {
+.cw-sr-input-yes {
+  height: 1.25rem;
+  width: 1.25rem;
+  background: #adcce5;
+  border-radius: 5px;
+  border: none;
   text-align: center;
 }
 
-.cw-sr-input, .cw-check-input {
+.cw-sr-input-no {
   height: 1.25rem;
   width: 1.25rem;
-  background: #C9E0E8;
+  background: #d1e5f5;
   border-radius: 5px;
   border: none;
+  text-align: center;
 }
 
 .cw-rep-input {
@@ -84,10 +100,19 @@
   width: 1.5rem;
 }
 
-.cw-weight-input {
+.cw-weight-input-yes {
   height: 1.25rem;
   width: 2.25rem;
-  background: #C9E0E8;
+  background: #adcce5;
+  border-radius: 5px;
+  border: none;
+  margin-left: .5rem;
+}
+
+.cw-weight-input-no {
+  height: 1.25rem;
+  width: 2.25rem;
+  background: #d1e5f5;
   border-radius: 5px;
   border: none;
   margin-left: .5rem;
@@ -97,9 +122,24 @@
   margin-left: 1.35rem;
 }
 
-.cw-check-input {
-  background: #C8E5B8;
-  margin-right: .2rem;
+.cw-check-yes{
+  height: 1.25rem;
+  width: 1.25rem;
+  background: #a8ca95;
+  border-radius: 5px;
+  border: none;
+  text-align: center;
+  margin-right: .4rem;
+}
+
+.cw-check-no{
+  height: 1.25rem;
+  width: 1.25rem;
+  background: #d6d6d6;
+  border-radius: 5px;
+  border: none;
+  text-align: center;
+  margin-right: .4rem;
 }
 
 .cw-total {
@@ -138,7 +178,7 @@
 
 .cw-finish-btn {
   font-size: .8rem;
-  background: #D3DDE5;
+  background: #d1e5f5;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15), 0px 4px 4px rgba(0, 0, 0, 0.01);
   border-radius: 5px;
   border: none;
@@ -148,6 +188,7 @@
 
 .cw-exercise-name {
   font-size: .8rem;
+  margin: 0 0.25rem;
 }
 
 .exercise-delete-btn {
