--- a/public/styles/leaderboard.css
+++ b/public/styles/leaderboard.css
@@ -2,15 +2,71 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+}
+
+.lb-h1-heading {
+  font-size: 1.3rem;
+  font-weight: normal;
+  margin-top: 1rem;
+}
+
+.lb-table-headings {
+  display: flex;
+  justify-content: space-between;
+  width: 15rem;
+  margin-top: 0.75rem;
+}
+
+.lb-single-heading {
+  font-size: 0.75rem;
+  font-weight: 600;
+  margin: 0.25rem;
 }
 
 .lb-info-container {
   display: flex;
   justify-content: space-between;
   width: 15rem;
+  padding-bottom: 0.25rem;
+}
+
+.lb-info {
+  margin: 0.25rem;
+}
+
+.lb-username-heading {
+  width: 66%;
+  text-align: center;
+}
+
+.lb-lifted-heading {
+  width: 33%;
+  text-align: center;
+}
+
+.lb-name {
+  height: 1rem;
+  width: 66%;
+  padding: 0.3rem;
+  margin-right: 0.5rem;
+  background: #C9E0E8;
+  border-radius: 5px;
+  border: none;
+  text-align: center;
+}
+
+.lb-weight {
+  height: 1rem;
+  width: 33%;
+  padding: 0.3rem;
+  background: #c1e7e5;
+  border-radius: 5px;
+  border: none;
+  text-align: center;
 }
 
 .leaderboard-crown {
-  width: 7rem;
+  width: 6rem;
   padding-top: 0.5rem;
 }
