--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,7 @@
 @import './styles/timer.css';
 @import "./styles/preset-workouts.css";
 @import "./styles/progress-bar.css";
+@import "./styles/update.css";
 @import "./styles/media-query.css";
 
 * {
