--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,7 @@
 @import "./styles/loading.css";
 @import './styles/timer.css';
 @import "./styles/preset-workouts.css";
+@import "./styles/previous-workouts.css";
 @import "./styles/progress-bar.css";
 @import "./styles/update.css";
 @import "./styles/media-query.css";
