--- a/public/styles/exercises-list.css
+++ b/public/styles/exercises-list.css
@@ -92,6 +92,7 @@
   justify-content: space-between;
   align-items: center;
   align-content: center;
+  padding: .5rem 0 1rem 0;
 }
 
 .exercise-search {
