--- a/public/styles/leaderboard.css
+++ b/public/styles/leaderboard.css
@@ -28,7 +28,7 @@
   display: flex;
   justify-content: space-between;
   width: 15rem;
-  padding-bottom: 0.25rem;
+  /* padding-bottom: 0.25rem; */
 }
 
 .lb-info {
@@ -46,7 +46,7 @@
 }
 
 .lb-name {
-  height: 1rem;
+  height: 1.1rem;
   width: 66%;
   padding: 0.3rem;
   margin-right: 0.5rem;
@@ -57,7 +57,7 @@
 }
 
 .lb-weight {
-  height: 1rem;
+  height: 1.1rem;
   width: 33%;
   padding: 0.3rem;
   background: #c1e7e5;
