leaderboard media query centering

--- a/public/styles/leaderboard.css
+++ b/public/styles/leaderboard.css
@@ -33,6 +33,10 @@
 
 .lb-info {
   margin: 0.25rem;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
 }
 
 .lb-username-heading {
