--- a/public/styles/current-workout.css
+++ b/public/styles/current-workout.css
@@ -254,6 +254,13 @@ form {
 
 .update-workout-name {
   background: #D2EBC0;  
+  height: 1.4rem;
+  width: 1.4rem;
+  border: none;
+  border-radius: 5px;
+  color: inherit;
+  padding-right: 1rem;
+  margin-right: .4rem;
   height: 1rem;
   width: 1rem;
   border: none;
