Added CSS to center all exercises page and changed spacing in homepage

--- a/public/styles/media-query.css
+++ b/public/styles/media-query.css
@@ -131,5 +131,11 @@
   .cw-sr-input-yes, .cw-sr-input-no, .cw-weight-input-yes, .cw-weight-input-no {
     height: .9rem;
   }
+}
 
+@media(min-width: 390px) {
+  .all-exercises {
+    display: flex;
+    justify-content: center;
+  }
 }
